# keg

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bwrap.rs  cgroup.rs  container.rs  die_with_parent.rs  filesystem.rs  keyring.rs  lib.rs  masked_paths.rs  overlayfs.rs  run.rs  seccomp.rs  slirp.rs  socket_pair.rs  utils.rs
src/container/: exec.rs  isolation.rs  mounting.rs  utils.rs
src/run/: base.rs  inner.rs  rootfs.rs  user.rs  utils.rs  workspace.rs
tests/: tests.sh
