[package]
name = "keg"
version = "1.1.2"
edition = "2021"
description = "A portable container without boilerplate."
documentation = "https://github.com/keg-project/keg"
homepage = "https://github.com/keg-project/keg"
repository = "https://github.com/keg-project/keg"
license = "MIT"
keywords = ["container"]
categories = ["virtualization", "command-line-utilities"]
default-run = "keg"

[dependencies]
bincode = "1.3.0"
indoc = "2.0.0"
libc = "0.2.0"
libseccomp = "0.3.0"
serde = { version = "1.0.0", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
